MB-20388 Resolve GCC build warnings

Change-Id: I89209f3f32b7cf43eeb320d843692a7bd7a25109
Reviewed-on: http://review.couchbase.org/67208
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: buildbot <build@couchbase.com>